fix #51: fix right to left alignments in english site

--- a/ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/odata-theme.css
+++ b/ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/odata-theme.css
@@ -19,10 +19,7 @@
 
 .odatasets h2 {
     font-size:250%;
-    direction:rtl;
-    text-align:right;
-    padding-right: 15px;
-
+    padding-left: 15px;
 }
 
 .odatasets p.alldatasets {
