--- a/ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/rtl.css
+++ b/ckan/ckanext-odata_org_il/ckanext/odata_org_il/fanstatic/rtl.css
@@ -43,3 +43,8 @@
 .nav-facet .nav-item a span.item-label {
     padding-right: 15px;
 }
+
+.odatasets h2 {
+    padding-left: auto;
+    padding-right: 15px;
+}
